<resources>
    <string name="app_name"></string>
    <string name="login">Login ke SORAK</string>
    <string name="signup">Daftar ke SORAK</string>
    <string name="email_telp">Email atau Nomer Telepon</string>
    <string name="password">Password</string>
    <string name="lupa_akun"><u>Lupa akun atau password</u></string>
    <string name="tombol_login">Login</string>
    <string name="hint_email">Email atau Nomor Telepon</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="hint_NIK">NIK</string>
    <string name="btn_signup">Daftar</string>
    <string name="pilih_daerah">Pilih Daerah:</string>
    <string name="title_activity_timeline">TimelineActivity</string>

    <string name="action_settings">Settings</string>
    <string name="anonim_kode">Anonim #00001</string>
    <string name="email_anon">anonim@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori">Kategori: </string>
    <string name="hint_cp">Ketik apa yang ingin disampaikan...</string>

    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="soera_rakjat">SOEARA RAKJAT</string>
    <string name="pencarian">Pencarian...</string>
    <string name="caption_postingan">Caption Posting</string>
    <string name="angka_vote">angka</string>

</resources>