<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:id="@+id/logo_so"
        android:layout_width="261dp"
        android:layout_height="95dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/logo_sorak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/profile_merah_mini"
        android:fontFamily="@font/fira_sans_bold"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_ke_so" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/btn_login"
        android:textColor="@color/putih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/lupa_akun"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lupa_akun"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fira_sans"
        android:gravity="center_vertical"
        android:text="@string/lupa_akun"
        android:textAppearance="@style/lupa_akun"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

    <TextView
        android:id="@+id/login_ke_so"
        android:layout_width="158dp"
        android:layout_height="31dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fira_sans_bold"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textAppearance="@style/login_soerak"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_so" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/key_password_mini"
        android:fontFamily="@font/fira_sans_bold"
        android:hint="@string/hint_password"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@+id/lupa_akun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="391dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="231dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/signup"
        android:textColor="@color/putih"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.862" />


</androidx.constraintlayout.widget.ConstraintLayout>