<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:id="@+id/logo_so"
        android:layout_width="261dp"
        android:layout_height="95dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logo_sorak"
        app:layout_constraintBottom_toTopOf="@+id/signup_ke_so"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_ke_so"
        android:layout_width="158dp"
        android:layout_height="31dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fira_sans_bold"
        android:gravity="center_vertical"
        android:text="@string/signup"
        android:textAppearance="@style/login_soerak"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/daftar_NIK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_so"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/daftar_email"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/profile_merah_mini"
        android:fontFamily="@font/fira_sans_bold"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/daftar_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daftar_NIK" />

    <EditText
        android:id="@+id/daftar_pw"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/key_password_mini"
        android:fontFamily="@font/fira_sans_bold"
        android:hint="@string/hint_password"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daftar_email"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/daftar_NIK"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/umur_kecil"
        android:fontFamily="@font/fira_sans_bold"
        android:hint="@string/hint_NIK"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/daftar_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_ke_so" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="312dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/btn_signup"
        android:textColor="@color/putih"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daftar_pw"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="345dp"
        android:layout_marginBottom="252dp"
        android:background="@drawable/button_back"
        app:layout_constraintBottom_toTopOf="@+id/daftar_NIK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>