<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/putih"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/profile_post"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="315dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/profile_picture"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_caption"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="204dp"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/lexend_deca"
            android:textColor="@color/black"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_caption"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/profile_post"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.513"
            tools:text="@string/anonim_kode" />

        <TextView
            android:id="@+id/tv_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="251dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/lexend_deca"
            android:textSize="13sp"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_caption"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/profile_post"
            card_view:layout_constraintTop_toBottomOf="@+id/textView3"
            card_view:layout_constraintVertical_bias="0.0" />


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="147dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/double_arrow_merah"
            android:padding="48dp"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_caption"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/textView3"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jumlah_vote"
            android:layout_width="55dp"
            android:layout_height="28dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="4dp"
            android:text="@string/angka_vote"
            android:textColor="@color/merah"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_caption"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/profile_post"
            card_view:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/fira_sans"
            android:padding="8dp"
            android:textColor="@color/black"
            card_view:layout_constraintBottom_toTopOf="@+id/imageView1"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/profile_post"
            tools:text="@string/caption_postingan" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="259dp"
            android:layout_height="175dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:padding="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_caption"
            tools:src="@tools:sample/backgrounds/scenic" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>