<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CreatePostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-33dp"
        tools:layout_editor_absoluteY="-262dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="263dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/kategori"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/rectangle_kategori"
            android:hint="@string/pilih_kategori"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/dropdown_kategori"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="208dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="231dp"
            android:background="@drawable/rectangle_cp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="331dp"
                android:layout_height="417dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="265dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/profile_picture"
                    app:layout_constraintBottom_toTopOf="@+id/editText2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="72dp"
                    android:layout_marginEnd="60dp"
                    android:fontFamily="@font/lexend_deca"
                    android:hint="@string/hint_cp"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/btn_gallery"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="194dp"
                    android:layout_marginTop="262dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_camera"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageButton
                    android:id="@+id/btn_camera"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="376dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_gallery"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </FrameLayout>


        <ImageButton
            android:id="@+id/btn_kirim_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="258dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/rectangle_kirim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>